--- a/JspPracticeAndServlet/JspAndServlet/src/main/webapp/login.html
+++ b/JspPracticeAndServlet/JspAndServlet/src/main/webapp/login.html
@@ -7,13 +7,18 @@
 <body>
 	<form action="login" method="post">
 		<h2>Student Registration</h2>
-		<label>Name:</label><br><br> <input name="s_name" placeholder="enter name" type="text" /><br><br>
-		<label>Prn:</label><br>
-		<br> <input name="s_prn" placeholder="enter prn" type="number" /><br><br>
-		<label>Email:</label><br>
-		<br> <input name="s_email" placeholder="enter email" type="email" /><br><br>
+		<label>Name:</label><br> <br> <input name="s_name"
+			placeholder="enter name" type="text" /><br> <br> <label>Prn:</label><br>
+		<br> <input name="s_prn" placeholder="enter prn" type="text" /><br>
+		<br> <label>Email:</label><br> <br> <input
+			name="s_email" placeholder="enter email" type="email" /><br> <br>
 
-		<button type="submit">register</button>
+		<button>
+			<a href="login.html">register</a>
+		</button>
+		<br>
+		<br>
+		<button type="submit">show all</button>
 	</form>
 </body>
 </html>
