--- a/LibraryManagement_JspJdbc/LibraryManagement/src/main/webapp/DelStat.html
+++ b/LibraryManagement_JspJdbc/LibraryManagement/src/main/webapp/DelStat.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Success</title>
+<title>Delete Status</title>
 
 <style>
     body {
@@ -37,13 +37,13 @@
 <body>
 
 <div class="box">
-    <h2>Book Added/Updated Successfully</h2>
+    <h2>Deleted Successfully</h2>
 
-    <form action="viewbook" method="get" style="display:inline;">
-        <button type="submit">View</button>
+    <form method="get" action="viewbook" style="display:inline;">
+        <button>View</button>
     </form>
 
-    <button><a href="addBook.html">Add Another</a></button>
+    <button><a href="addBook.html">Home</a></button>
 </div>
 
 </body>
