--- a/LibraryManagement_JspJdbc/LibraryManagement/src/main/webapp/addBook.html
+++ b/LibraryManagement_JspJdbc/LibraryManagement/src/main/webapp/addBook.html
@@ -2,23 +2,76 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>AddBook</title>
+<title>Add Book</title>
+
+<style>
+body {
+	font-family: Arial, sans-serif;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-top: 40px;
+}
+
+form {
+	width: 350px;
+	display: flex;
+	flex-direction: column;
+	gap: 12px;
+	padding: 20px;
+	box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
+	border-radius: 6px;
+}
+
+input {
+	padding: 8px;
+	border: 1px solid #ccc;
+}
+
+.add {
+	padding: 4px 10px;
+	cursor: pointer;
+}
+
+a {
+	text-decoration: none;
+	color: black;
+}
+
+.links {
+	margin-top: 20px;
+	display: flex;
+	gap: 12px;
+}
+</style>
+
 </head>
+
 <body>
-   <form method="post" action="addbook">
-      <h2>Add Book</h2>
-      <hr>
-      <label>Title</label> <br><br>
-      <input type="text" name="title" placeholder="enter title"/> <br><br>
-      <label>Author</label> <br><br>
-      <input type="text" name="author" placeholder="enter author name"/> <br><br>
-      <label>Genre</label> <br><br>
-      <input type="text" name="genre" placeholder="enter genre"/> <br><br>
-      <label>Year</label> <br><br>
-      <input type="number" name="year" placeholder="enter year"/> <br><br>
-      
-      <button type="submit">add</button>
-   
-   </form>
+
+	<form method="post" action="addbook">
+		<h2>Add Book</h2>
+		<hr/>
+
+		<label>Title</label> <input type="text" name="title"
+			placeholder="Enter book title"> <label>Author</label> <input
+			type="text" name="author" placeholder="Enter author name"> <label>Genre</label>
+		<input type="text" name="genre" placeholder="Enter genre"> <label>Year</label>
+		<input type="number" name="year" placeholder="Enter published year">
+
+		<button type="submit" class="add">Add</button>
+	</form>
+
+		<form action="viewbook" method="get" style="display: inline;">
+			<button>
+				<a href="update.html">Update</a>
+			</button>
+			<button type="submit">View</button>
+			<button>
+				<a href="delete.html">Delete</a>
+			</button>
+		</form>
+
+
 </body>
 </html>
